# jsonschema-extended

./: .pre-commit-config.yaml  README.md  pyproject.toml
jsonschema_extended/: __init__.py  format_checker.py  validator.py
jsonschema_extended/checkers/: __init__.py  europeanisms.py
