[tool.poetry]
name = "jsonschema-extended"
version = "0.1.0"
description = "Extended non-draft-compliant version of JSON Schema validation and format checks"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = {extras = ["format_nongpl"], version = "^3.2.0"}

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
